page 오류 수정 완료. wish 분리 완료